gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: primary-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: PASSTHROUGH
    hosts: 
    - dashboard.gunsmoke.local
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts: 
      - prometheus.gunsmoke.local
      - grafana.gunsmoke.local
      - ping.gunsmoke.local
      - pong.gunsmoke.local
      - gitea.gunsmoke.local
      - gocd.gunsmoke.local
      - registry.gunsmoke.local
