gocd.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gocd
  namespace: gocd
spec:
  hosts:
  - gocd.gunsmoke.local
  gateways:
  - default/primary-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    - port: 80
    route:
    - destination:
        host: gocd-server.gocd.svc.cluster.local
        port:
          number: 8153
