ping.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-v1
  labels:
    app: ping
    version: v1
    operated-prometheus: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping
      version: v1
  template:
    metadata:
      labels:
        app: ping
        version: v1
    spec:
      containers:
      - name: ping
        image: k3d-myregistry.localhost:12345/ping:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ping
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ping
            port:
              number: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ping
  labels:
    app: ping
    service: ping
spec:
  selector:
    app: ping
  ports:
  - port: 8080
    targetPort: 8080
    name: http
