pingpong.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-v1
  labels:
    app: pingpong
    version: v1
    operated-prometheus: "true"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pingpong
      version: v1
  template:
    metadata:
      labels:
        app: pingpong
        version: v1
    spec:
      containers:
      - name: pingpong
        image: k3d-myregistry.localhost:12345/pingpong:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pingpong
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: pingpong
  labels:
    app: pingpong
    service: pingpong
spec:
  selector:
    app: pingpong
  ports:
  - port: 80
    targetPort: 8080
    name: http
