pong.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pong
  labels:
    app: pong
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pong
      version: v1
  template:
    metadata:
      labels:
        app: pong
        version: v1
    spec:
      containers:
      - name: pong
        image: k3d-myregistry.localhost:12345/pong:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-pong
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pong
            port:
              number: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: pong
  labels:
    app: pong
    service: pong
    operated-prometheus: "true"
spec:
  selector:
    app: pong
  ports:
  - port: 8080
    targetPort: 8080
    name: http
