registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  labels:
    app: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
      - name: registry
        image: registry:2
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: registry-data
          mountPath: /var/lib/registry
        - name: registry-certs
          mountPath: /certs
          readOnly: true
        - name: registry-auth
          mountPath: /auth
          readOnly: true
      volumes:
      - name: registry-data
        emptyDir: {}
      - name: registry-auth
        configMap:
          name: registry-auth
      - name: registry-certs
        secret:
          secretName: registry-certs
---
apiVersion: v1
kind: Service
metadata:
  name: registry
spec:
  selector:
    app: registry
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  type: ClusterIP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: registry
spec:
  hosts:
  - registry.gunsmoke.local
  gateways:
  - default/primary-gateway
  tls:
  - match:
    - port: 443
      sniHosts:
      - registry.gunsmoke.local
    route:
    - destination:
        host: registry.default.svc.cluster.local
        port:
          number: 5000
      weight: 100
